# KageSecurity

./: .dockerignore  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  Dockerfile.api  GAPS.md  LICENSE  README.md  action.yml  docker-compose.yml  kagesec.db  nuclei_results.json  pyproject.toml  setup.py
.claude/: settings.json
.claude/hooks/: post_deploy_scan.py
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  kagesec-scan.yml  publish.yml
api/: db.py  main.py  models.py  scanner_bridge.py  scheduler.py  schemas.py
api/routes/: findings.py  reports.py  scans.py  schedules.py
ci/: kagesec-github-actions.yml  kagesec-gitlab.yml  kagesec.yml
cli/: main.py
engine/: go.mod  main.go
engine/cmd/: root.go
engine/output/: streamer.go
engine/runner/: engine.go
engine/template/: executor.go  loader.go  matcher.go  selector.go  types.go
helm/kagesec/: Chart.yaml  values.yaml
helm/kagesec/templates/: _helpers.tpl  job.yaml  serviceaccount.yaml
scanner/: __init__.py  mcp_server.py
scanner/ai/: cve_researcher.py  provider.py  reporter.py  template_selector.py  verifier.py
scanner/api/: server.py
scanner/compliance/: appi.py  gdpr.py  hipaa.py  iso27001.py  mapper.py
scanner/core/: api_scanner.py  browser_crawler.py  code_runner.py  config.py  crawl_state.py  crawler.py  engine.py  findings_db.py  fingerprinter.py  flow_evaluator.py  grpc_scanner.py  har_importer.py  headless_runner.py  interactsh.py  js_extractor.py  notifier.py  oob.py  payload_loader.py  policy.py  prioritizer.py  profiles.py  rate_limiter.py  scan_policy.py  scan_result.py  scheduler.py  soap_scanner.py  suppressions.py  template_runner.py  updater.py  workflow.py
scanner/modules/: ai_cve.py  api_key_leak.py  auth_bypass.py  blind_xss.py  breach.py  business_logic.py  cache_poisoning.py  captcha_check.py  clickjacking.py  cmd_injection.py  cookie_security.py  cors.py  coverage_check.py  crlf.py  crossdomain.py  csrf.py  csti.py  cve_check.py  debug_mode.py  deserialization.py  dnssec.py  exposed_files.py  file_upload.py  form_fuzz.py  graphql.py  host_header.py  http_methods.py  http_param_pollution.py  idor.py  jwt_attacks.py  log4j_deep.py  multistep_injection.py  oauth.py  open_redirect.py  padding_oracle.py  param_discovery.py  path_discovery.py  path_traversal.py  prototype_pollution.py  race_condition.py  (+24 more)
scanner/payloads/: blind_xss.yaml  cmd_injection.yaml  cve_signatures.yaml  form_fuzz.yaml  jwt_secrets.yaml  params.yaml  path_traversal.yaml  paths.yaml  sqli.yaml  ssrf.yaml  ssti.yaml  subdomains.yaml  waf_bypass.yaml  xss.yaml  xxe.yaml
scanner/reporters/: burp_reporter.py  certificate_reporter.py  github_reporter.py  jira_reporter.py  pdf_reporter.py  sarif_reporter.py  zap_reporter.py
scanner/templates/cves/: CVE-2019-11510.yaml  CVE-2019-19781.yaml  CVE-2019-8451.yaml  CVE-2020-11978.yaml  CVE-2020-14882.yaml  CVE-2020-17519.yaml  CVE-2020-1938.yaml  CVE-2021-21972.yaml  CVE-2021-21985.yaml  CVE-2021-22205.yaml  CVE-2021-22986.yaml  CVE-2021-25646.yaml  CVE-2021-26084.yaml  CVE-2021-26855.yaml  CVE-2021-3129.yaml  CVE-2021-34473.yaml  CVE-2021-40438.yaml  CVE-2021-41773.yaml  CVE-2021-43798.yaml  CVE-2021-44228.yaml  CVE-2021-44515.yaml  CVE-2021-45046.yaml  CVE-2022-0543.yaml  CVE-2022-1388.yaml  CVE-2022-2185.yaml  CVE-2022-22954.yaml  CVE-2022-22965.yaml  CVE-2022-26134.yaml  CVE-2022-26138.yaml  CVE-2022-26318.yaml  CVE-2022-30190.yaml  CVE-2022-41082.yaml  CVE-2022-42889.yaml  CVE-2022-46169.yaml  CVE-2023-20887.yaml  CVE-2023-22515.yaml  CVE-2023-23397.yaml  CVE-2023-27898.yaml  CVE-2023-28432.yaml  CVE-2023-29357.yaml  (+10 more)
scanner/templates/exposed-panels/: grafana.yaml  jenkins.yaml  kibana.yaml  laravel-telescope.yaml  phpmyadmin.yaml  prometheus.yaml  spring-boot-actuator.yaml
scanner/templates/misconfigs/: apache-server-status.yaml  backup-files.yaml  env-exposed.yaml  git-exposed.yaml  graphql-introspection.yaml  phpinfo.yaml  swagger-exposed.yaml
scanner/utils/: http.py  payloads.py
scanner/workflows/: quick-web.yaml  wordpress.yaml
tests/: vulnerable_app.py
tests/integration/: docker-compose.yml  test_clean_target.py  test_dvwa.py  test_juice_shop.py
tests/unit/: test_config.py  test_multitarget.py  test_rate_limiter.py  test_reauth.py  test_scan_result.py  test_sqli.py  test_template_runner.py
