[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kagesec"
version = "0.2.0"
description = "AI-powered web application security scanner — OWASP Top 10, HIPAA, GDPR, ISO 27001, APPI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.30",
    "lxml>=5.0",
    "flask>=3.0",          # test app only
    "jinja2>=3.1",         # HTML reports
]

[project.scripts]
kagesec = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "celery>=5.3",
    "redis>=5.0",
    "alembic>=1.13",
]
