[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagesec"
version = "0.3.2"
description = "AI-powered web application security scanner — OWASP Top 10, HIPAA, GDPR, ISO 27001, APPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["security", "scanner", "dast", "owasp", "penetration-testing", "appsec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.30",
    "lxml>=5.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ZulAmi/KageSecurity"
Repository = "https://github.com/ZulAmi/KageSecurity"
"Bug Tracker" = "https://github.com/ZulAmi/KageSecurity/issues"

[project.scripts]
kagesec = "cli.main:main"

[project.optional-dependencies]
browser = [
    "playwright>=1.57,<2.0",
    "pyotp>=2.9",
    "websockets>=12.0",
]
pdf = [
    "playwright>=1.57,<2.0",
    "jinja2>=3.1",
]
dns = [
    "dnspython>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "build>=1.2",
    "twine>=5.0",
    "psutil>=5.9",
]
claude = [
    "mcp>=1.0",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-generativeai>=0.7",
]
mistral = [
    "mistralai>=1.0",
]
all-ai = [
    "openai>=1.0",
    "google-generativeai>=0.7",
    "mistralai>=1.0",
    "mcp>=1.0",
]
all = [
    "playwright>=1.57,<2.0",
    "pyotp>=2.9",
    "websockets>=12.0",
    "dnspython>=2.6",
    "openai>=1.0",
    "google-generativeai>=0.7",
    "mistralai>=1.0",
    "mcp>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "cli*"]

[tool.setuptools.package-data]
"scanner" = ["**/*.yaml", "**/*.yml", "**/*.html", "**/*.css", "**/*.j2", "_bin/*"]
